[package]
name = "tirefire"
description = "An example of Diesel Common Table Expressions"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.7", features = ["postgres", "r2d2", "chrono", "uuidv07"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
